# predictionprophet

./: .gitignore  Dockerfile  LICENSE  Procfile  README.md  approach.md  benchmark.py  mypy.ini  pyproject.toml  requirements.txt  setup.sh
.devcontainer/: devcontainer.json
.github/actions/python_prepare/: action.yaml
.github/workflows/: python_ci.yaml
evo_prophet/: app.py  main.py
evo_prophet/autonolas/: research.py
evo_prophet/benchmark/: agents.py
evo_prophet/deployment/: models.py
evo_prophet/functions/: cache.py  create_embeddings_from_results.py  debate_prediction.py  evaluate_question.py  grade_info.py  is_predictable_and_binary.py  prepare_report.py  rephrase_question.py  rerank_results.py  research.py  scrape_results.py  search.py  utils.py  web_scrape.py  web_search.py
evo_prophet/models/: WebSearchResult.py
evo_researcher/: app.py  main.py  test.py
evo_researcher/autonolas/: research.py
evo_researcher/benchmark/: agents.py  benchmark.py  logger.py  utils.py
evo_researcher/deployment/: models.py
evo_researcher/functions/: cache.py  create_embeddings_from_results.py  evaluate_question.py  generate_subqueries.py  grade_info.py  make_prediction.py  parallelism.py  prepare_report.py  rephrase_question.py  rerank_results.py  rerank_subqueries.py  research.py  scrape_results.py  search.py  summarize.py  utils.py  web_scrape.py  web_search.py
evo_researcher/models/: WebSearchResult.py
evo_researcher/utils/: logger.py  secrets.py
prediction_prophet/: app.py  bot.py  main.py
prediction_prophet/autonolas/: research.py
prediction_prophet/benchmark/: agents.py
prediction_prophet/deployment/: models.py
prediction_prophet/functions/: create_embeddings_from_results.py  debate_prediction.py  evaluate_question.py  generate_subqueries.py  is_predictable_and_binary.py  logprobs_parser.py  prepare_report.py  rephrase_question.py  rerank_results.py  rerank_subqueries.py  research.py  scrape_results.py  search.py  summarize.py  utils.py  web_scrape.py  web_search.py
prediction_prophet/models/: WebScrapeResult.py
scripts/: agent_app.py  benchmark.py  compare_manual_scrap_vs_tavily_raw_content.py  compare_scraping.py  compare_search_results.py  deploy.py  measure_memory.py  public_agent_app.py
tests/: test_benchmark.py  test_evaluate_question.py  test_grading.py  test_misc.py  test_research.py  test_scraping.py
web/: index.html  package-lock.json  package.json  style.css
