[tool.poetry]
name = "evo_researcher"
version = "0.1.8"
description = ""
authors = ["Nestor Amesty <nestor@polywrap.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "0.0.303"
beautifulsoup4 = "4.12.2"
click = "8.0.2"
markdownify = "0.11.6"
tavily-python = "0.3.0"
chromadb = "0.4.13"
pandas = "2.1.1"
pytest = "7.2.1"
openai = "1.11.0"
spacy = "3.7.2"
google-api-python-client = "2.95.0"
tiktoken = "0.5.2"
tabulate = "0.9.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
