[tool.poetry]
name = "evo_researcher"
version = "0.1.10"
description = ""
authors = ["Nestor Amesty <nestor@polywrap.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
langchain = "0.1.9"
beautifulsoup4 = "4.12.2"
click = "8.0.2"
markdownify = "0.11.6"
pandas = "2.1.1"
pytest = "7.2.1"
openai = "1.10.0"
chromadb = "0.4.22"
spacy = "3.7.2"
google-api-python-client = "2.95.0"
tiktoken = "0.5.2"
tavily-python = "^0.3.0"
tabulate = "^0.9.0"
pysqlite3-binary = {version="^0.5.2.post3", optional=true}
langchain-openai = "^0.0.8"
tenacity = "^8.2.3"
joblib = "^1.3.2"
streamlit = "^1.30.0"
watchdog = "^3.0.0"
scipy = "^1.12.0"
scikit-learn = "^1.4.0"
typer = "^0.9.0"
types-requests = "^2.31.0.20240125"
types-python-dateutil = "^2.8.19.20240106"
prediction-market-agent-tooling = { version = "0.4.0", extras = ["langchain"] }
langchain-community = "^0.0.21"

[tool.poetry.extras]
pysqlite3-binary = ["pysqlite3-binary"]

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"

[tool.poetry.scripts]
research= "evo_researcher.main:research"
predict= "evo_researcher.main:predict"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
