[tool.poetry]
name = "prediction_prophet"
version = "0.1.10"
description = ""
authors = ["Nestor Amesty <nestor@polywrap.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
langchain = "^0.1.9"
beautifulsoup4 = "^4.12.3"
click = "^8.0.2"
markdownify = "0.11.6"
pandas = "2.1.1"
pytest = "^8.0.0"
openai = "^1.10.0"
chromadb = "0.4.22"
spacy = "3.7.5"
en_core_web_md = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.7.1/en_core_web_md-3.7.1-py3-none-any.whl" }
google-api-python-client = "2.95.0"
tiktoken = "0.5.2"
tavily-python = "^0.3.0"
tabulate = "^0.9.0"
pysqlite3-binary = {version="^0.5.2.post3", markers = "sys_platform == 'linux'"}
langchain-openai = "^0.0.5"
tenacity = "^8.2.3"
joblib = "^1.3.2"
streamlit = "^1.30.0"
watchdog = "^3.0.0"
scipy = "^1.12.0"
scikit-learn = "^1.4.0"
typer = ">=0.9.0,<1.0.0"
types-requests = "^2.31.0.20240125"
types-python-dateutil = "^2.8.19.20240106"
prediction-market-agent-tooling = { version = "^0.34.0", extras = ["langchain", "google"] }
langchain-community = "^0.0.32"
memory-profiler = "^0.61.0"
matplotlib = "^3.8.3"
pyautogen = "^0.2.19"
firecrawl-py = "^0.0.13"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"

[tool.poetry.scripts]
research= "prediction_prophet.main:research"
predict= "prediction_prophet.main:predict"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
